--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Create an Article</h1>
+<h1> Edit an Article</h1>
 
 <% if @article.errors.any? %>
 <h2>The following errors prevented the article from being created:</h2>
@@ -8,7 +8,6 @@
     <% end %>
 </ul>
 <% end %>
-
 
 <%= form_for @article do |f| %>
     <p>
@@ -24,5 +23,4 @@
 </p>
 
 <% end %>
-
 <%= link_to "All Articles", articles_path %>
