--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
 <h1>Here is the Home Page</h1>
 
 <img src="http://ssuet.edu.pk/wp-content/uploads/2016/08/header-background.jpg">
-<%= link_to 'The About Page', about_path %>
+<%= link_to 'Alpha Blog', articles_path %> | <%= link_to 'The About Page', about_path %>
