--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,2 +1,52 @@
+$navbar-default-bg: #ADD8E6;
+
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+#logo {
+    float: left;
+    font-size: 1.7em;
+    color: #fff;
+    text-transform: uppercase;
+    letter-spacing: -1px;
+    font-weight: bold;
+}
+
+#logo:hover {
+    color: #fff;
+    text-decoration: none;
+}
+
+.center {
+    text-align: center;
+}
+
+.jumbotron {
+    background-image: asset-url('header-background.jpg') ;
+    color: white;
+}
+
+footer {
+    margin-top: 45px;
+    padding-top: 5px;
+    border-top: 5px solid #eaeaea;
+    color: #777;
+}
+
+footer a:hover{
+    color: #222;
+}
+
+footer ul {
+    float: right;
+    list-style: none;
+}
+
+footer small{
+    float: left;
+}
+
+footer ul li {
+    float: left;
+    margin-left: 15px;
+}
