add styling to show

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -26,6 +26,11 @@ $navbar-default-bg: #ADD8E6;
     color: white;
 }
 
+.article-actions {
+    border-top: 1px solid #eaeaea;
+    padding-top: 5px;
+}
+
 footer {
     margin-top: 45px;
     padding-top: 5px;
