--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,7 +1,12 @@
-<h1>Showing Selected Article</h1>
-
-<p>Title: <%= @article.title%></p>
-<p>Description: <%= @article.description%></p>
-
-<%= link_to "All Articles", articles_path %>
-<%= link_to "Edit Article", edit_article_path(@article) %>
+<h2 align="center">Title: <%= @article.title%></h2>
+<div class"well col-xs-8 col-xs-offset-2">
+    <h4 class="center"><strong>Description:</strong></h4>
+    <hr>
+    <%= simple_format(@article.description) %>
+    <div class="article-actions">
+        <%= link_to "Edit Article", edit_article_path(@article), class: "btn btn-xs btn-primary" %>
+        <%= link_to "Delete this Article", article_path(@article), method: :delete, 
+                                          data: { confirm: "Are you sure?"}, class: "btn btn-xs btn-danger" %>
+        <%= link_to "View All Articles", articles_path, class: "btn btn-xs btn-success" %>
+    </div>
+</div>
