--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -31,6 +31,17 @@ $navbar-default-bg: #ADD8E6;
     padding-top: 5px;
 }
 
+.article-title {
+    font-weight: bold;
+    font-size: 1.53em;
+}
+
+.article-body{
+    border-top: 1px solid #eaeaea;
+    padding-top: 15px;
+    padding-bottom: 15px;
+}
+
 footer {
     margin-top: 45px;
     padding-top: 5px;
